--- a/contact.html
+++ b/contact.html
@@ -41,14 +41,14 @@
 
 
 			<div>
-				I’m a multi-disciplinary designer, freshly graduated from Monash University with a bachelor degree of Communication Design. I specialise in brand identity design, photography and illustration. Each design is concept driven, developing a unique solution that is specific for each project.
+				I’m a multi-disciplinary designer, graduated from Monash University with a bachelor degree of Communication Design. I specialise in brand identity design, photography and illustration. Each design is concept driven, developing a unique solution that is specific for each project.
 				<br>If you'd like to discuss a strategic approach to the design, redesign, or refinement of your visual branding, please don't hesitate to get in touch with me. :)
         <br><br><br><br>
 				Monash University — <br>
         Bachelor of Communication Design (Graduated 2017)
 				<br><br>
 				Freelance — <br>
-        Various clients (Nov 2014–present)
+        Various clients (Dec 2017–present)
 
 			</div>
 			</section>
@@ -58,7 +58,7 @@
 	</body>
 
 	<footer>
-	HANDMADE WEBSITE BY YUNYI.DESIGN @ 2017-2018 ALL RIGHTS RESERVED
+	HANDMADE WEBSITE BY YUNYI.DESIGN @ 2017-2019 ALL RIGHTS RESERVED
 	</footer>
 
 
