--- a/index/commercial.html
+++ b/index/commercial.html
@@ -36,28 +36,28 @@
      </div>
 
      <div class="large">
-        Web Design for BIJIA © Protrio Pty Ltd
+        Web Design for BIJIA © Protrio Pty Ltd <br>-
         <img src="https://farm8.staticflickr.com/7840/47254603682_074aba86f3_b.jpg" alt="">
-        Menu Design and Exterior Deco Design for Grand Lafayette © Protrio Pty Ltd
+        Menu Design and Exterior Deco Design for Grand Lafayette © Protrio Pty Ltd<br>-
         <img src="https://farm8.staticflickr.com/7896/33431005008_3e9b15943b_b.jpg" alt="">
         <img src="https://farm8.staticflickr.com/7854/47306819891_1194f04331_b.jpg" alt="">
         <img src="https://farm8.staticflickr.com/7848/47254324832_0e2308e53b_b.jpg" alt="">
-          One Tree Theatre <br>
+        <img src="https://farm8.staticflickr.com/7891/46583922414_ac0365fbed_b.jpg" alt="">
+        <img src="https://farm8.staticflickr.com/7874/46392210675_ee9d0b1dac_b.jpg" alt="">
+          One Tree Theatre <br>-
           <img src="https://c2.staticflickr.com/2/1771/30227038668_f6be69f142_b.jpg" alt="">
           <img src="https://c2.staticflickr.com/2/1775/43188242375_988b0148d3_b.jpg" alt="">
           <img src="https://c2.staticflickr.com/2/1813/42285695310_62a27bda28_b.jpg" alt="">
           <img src="https://c2.staticflickr.com/2/1816/30226878468_838bee511d_o.jpg" alt="">
           <img src="https://c2.staticflickr.com/2/1774/30226878328_5b3436bc68_o.jpg" alt="">
           <img src="https://c2.staticflickr.com/2/1774/30226877728_6cdb9cfa29_o.jpg" alt="">
-          Vomhe<br>
-          <img src="https://c1.staticflickr.com/1/935/29053985957_e40488f11c_b.jpg" alt="">
-          Poster Designs
+          Poster Designs<br>-
           <img src="https://c2.staticflickr.com/2/1811/29157772857_9a4ca67e81_b.jpg" alt="">
           <img src="https://c2.staticflickr.com/2/1795/44047493672_87a7edaf80_b.jpg" alt="">
-          Brand Identity Design for Yukongjian Interior Design
+          Brand Identity Design for Yukongjian Interior Design<br>-
+          <img src="https://c2.staticflickr.com/2/1778/30227388318_2082764495_b.jpg" alt="">
           <img src="https://c2.staticflickr.com/2/1833/30227315318_b9619b6f8e_b.jpg" alt="">
           <img src="https://c2.staticflickr.com/2/1800/30227347138_c8c2e58c21_b.jpg" alt="">
-          <img src="https://c2.staticflickr.com/2/1778/30227388318_2082764495_b.jpg" alt="">
      </div>
     </section>
   </div>
