--- a/index/commercial.html
+++ b/index/commercial.html
@@ -39,13 +39,12 @@
         Web Design for BIJIA © Protrio Pty Ltd <br>-
         <img src="https://farm8.staticflickr.com/7840/47254603682_074aba86f3_b.jpg" alt="">
         Menu Design and Exterior Deco Design for Grand Lafayette © Protrio Pty Ltd<br>-
+        <img src="https://farm8.staticflickr.com/7913/40349639083_c4c113aeda_o.png" alt="">
+        <img src="https://farm8.staticflickr.com/7819/47314668161_06483aee51_o.png" alt="">
         <img src="https://farm8.staticflickr.com/7896/33431005008_3e9b15943b_b.jpg" alt="">
         <img src="https://farm8.staticflickr.com/7854/47306819891_1194f04331_b.jpg" alt="">
         <img src="https://farm8.staticflickr.com/7848/47254324832_0e2308e53b_b.jpg" alt="">
-        <img src="https://farm8.staticflickr.com/7891/46583922414_ac0365fbed_b.jpg" alt="">
-        <img src="https://farm8.staticflickr.com/7874/46392210675_ee9d0b1dac_b.jpg" alt="">
           One Tree Theatre <br>-
-          <img src="https://c2.staticflickr.com/2/1771/30227038668_f6be69f142_b.jpg" alt="">
           <img src="https://c2.staticflickr.com/2/1775/43188242375_988b0148d3_b.jpg" alt="">
           <img src="https://c2.staticflickr.com/2/1813/42285695310_62a27bda28_b.jpg" alt="">
           <img src="https://c2.staticflickr.com/2/1816/30226878468_838bee511d_o.jpg" alt="">
