--- a/index/commercial.html
+++ b/index/commercial.html
@@ -40,7 +40,7 @@
         <img src="https://farm8.staticflickr.com/7840/47254603682_074aba86f3_b.jpg" alt="">
         Menu Design and Exterior Deco Design for Grand Lafayette © Protrio Pty Ltd<br>-
         <img src="https://farm8.staticflickr.com/7913/40349639083_c4c113aeda_o.png" alt="">
-        <img src="https://farm8.staticflickr.com/7819/47314668161_06483aee51_o.png" alt="">
+        <img src="https://farm8.staticflickr.com/7819/47314668161_ce2852f834_b.jpg" alt="">
         <img src="https://farm8.staticflickr.com/7896/33431005008_3e9b15943b_b.jpg" alt="">
         <img src="https://farm8.staticflickr.com/7854/47306819891_1194f04331_b.jpg" alt="">
         <img src="https://farm8.staticflickr.com/7848/47254324832_0e2308e53b_b.jpg" alt="">
